--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,34 @@
+asn1crypto==0.24.0
+beautifulsoup4==4.6.0
+chardet==3.0.4
 click==6.7
+cryptography==2.1.4
+defusedxml==0.5.0
+enum34==1.1.6
 Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
+html5lib==0.999999999
+idna==2.6
+ipaddress==1.0.17
 itsdangerous==0.24
 Jinja2==2.10
+keyring==10.6.0
+keyrings.alt==3.0
+lxml==4.2.1
 MarkupSafe==1.0
+numpy==1.13.3
 psycopg2==2.7.4
+psycopg2-binary==2.7.4
+pycrypto==2.6.1
+pygobject==3.26.1
 PyJWT==1.6.1
+pyliblzma==0.5.3
+pyxdg==0.25
+scour==0.36
+SecretStorage==2.3.1
+six==1.11.0
+SOAPpy==0.12.22
 SQLAlchemy==1.2.5
+webencodings==0.5
 Werkzeug==0.14.1
+wstools==0.4.3
